@@ -366,6 +366,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 1017) fixed thumbnails of animated gifs.
 * Add APC as object caching option
 * Update to Albanian localization (sq)
+* (bug 6099) Introduce {{DIRECTIONMARK}} magic word (with {{DIRMARK}} as an alias)
 
 == Compatibility ==
 
